--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "utilities",
-  "version": "0.0.0",
+  "name": "dev-tools",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy:github": "ng deploy --base-href=https://vasuvanka.github.io/dev-tools",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -36,6 +37,7 @@
     "@angular/cli": "^20.3.2",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
