--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "deploy:github": "ng deploy --base-href=/dev-tools/",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
