--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,27 +1,20 @@
-# Simple workflow for deploying an Angular project to GitHub Pages
 name: Deploy Angular to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job for the Angular application
   build:
     runs-on: ubuntu-latest
     steps:
@@ -31,29 +24,26 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Specify a compatible Node.js version
-          cache: 'npm'
+          node-version: 20
+          cache: npm
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build Angular app
-        # Replace 'dev-tools' with your actual project name from angular.json
         run: npm run build -- --base-href=/dev-tools/ --output-path=dist/dev-tools/browser
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # This must be the path to the 'browser' output folder
-          path: './dist/dev-tools/browser'
+          path: dist/dev-tools/browser
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build # This job depends on the build job succeeding
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
