--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+            "outputPath": "dist/dev-tools/browser"
           },
           "configurations": {
             "production": {
