--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy:github": "ng deploy --base-href=/dev-tools/",
+    "deploy": "ng deploy --base-href=/dev-tools/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
