--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Clean build directory
+        run: rm -rf dist
+
       - name: Build Angular app
         run: npm run build -- --base-href=/dev-tools/
 
