updated docs folder

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:github": "ng build --prod --output-path docs --base-href /dev-tools/",
     "deploy": "ng deploy --base-href=/dev-tools/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
